Adding the compare function for building plots

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,16 @@
             "program": "optimize.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--problem", "vehicle", "--algorithm", "random", "--runs", "1", "--save_results", "True"]
+            "args": ["--problem", "vehicle", "--algorithm", "nsga2", "--runs", "2", "--save_results", "True"]
+        },
+        {
+            "name": "compare.py",
+            "type": "python",
+            "request": "launch",
+            "program": "compare.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": ["--stats_path", "stats", "--stats_names", "NSGA-II"]
         }
     ]
 }
