--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,5 @@
-about-time==3.1.1
-alive-progress==2.4.1
-autograd==1.4
-cma==3.2.2
-contourpy==1.0.5
-cycler==0.11.0
-Deprecated==1.2.13
-dill==0.3.5.1
-fonttools==4.37.3
-future==0.18.2
-grapheme==0.6.0
-kiwisolver==1.4.4
-matplotlib==3.6.0
-numpy==1.23.3
-packaging==21.3
-Pillow==9.2.0
+
 pymoo==0.6.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-scipy==1.9.1
-Shapely==1.8.4
-six==1.16.0
-wrapt==1.14.1
+shapely
+pandas
+numpy
